Update .config/nvim/init.lua Update .config/nvim/lazy-lock.json Update .config/nvim/lua/chadrc.lua Update .config/nvim/lua/config/keymaps.lua Update .config/nvim/lua/config/lazy.lua Update .config/nvim/lua/config/options.lua Update .config/nvim/lua/plugins/blink.lua Update .config/nvim/lua/plugins/lualine.lua Update .config/nvim/lua/plugins/mini.lua Update .config/nvim/lua/plugins/noice.lua Update .config/nvim/lua/plugins/snacks.lua Update .config/nvim/lua/plugins/ui.lua Update .config/tmux/tmux.conf Update .config/vicinae/vicinae.json Update .config/waybar/config.jsonc Update .config/waybar/style.css Update .config/zed/settings.json Update .config/zed/themes/aether.json

--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -27,9 +27,10 @@
     "format": "{title}",
     "rewrite": {
       "(.*) - Brave": "🌍 $1",
+      "(.*) - Youtube": "📺 $1",
       "nvim (.*)": " $1",
       "(.*) - mpv": "🎥 $1",
-      "abelfubu@home:(.*)": "💻 $1",
+      "abelfubu@home:(.*)": "💻 $1"
     },
   },
   "hyprland/workspaces": {
@@ -83,7 +84,13 @@
     "on-click-right": "omarchy-launch-floating-terminal-with-presentation omarchy-tz-select",
   },
   "network": {
-    "format-icons": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤨"],
+    "format-icons": [
+      "󰤯",
+      "󰤟",
+      "󰤢",
+      "󰤥",
+      "󰤨"
+    ],
     "format": "{icon}",
     "format-wifi": "{icon}",
     "format-ethernet": "󰀂",
@@ -101,8 +108,30 @@
     "format-charging": "{icon}",
     "format-plugged": "",
     "format-icons": {
-      "charging": ["󰢜", "󰂆", "󰂇", "󰂈", "󰢝", "󰂉", "󰢞", "󰂊", "󰂋", "󰂅"],
-      "default": ["󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"],
+      "charging": [
+        "󰢜",
+        "󰂆",
+        "󰂇",
+        "󰂈",
+        "󰢝",
+        "󰂉",
+        "󰢞",
+        "󰂊",
+        "󰂋",
+        "󰂅"
+      ],
+      "default": [
+        "󰁺",
+        "󰁻",
+        "󰁼",
+        "󰁽",
+        "󰁾",
+        "󰁿",
+        "󰂀",
+        "󰂁",
+        "󰂂",
+        "󰁹"
+      ],
     },
     "format-full": "󰂅",
     "tooltip-format-discharging": "{power:>1.0f}W↓ {capacity}%",
@@ -117,6 +146,7 @@
   "bluetooth": {
     "format": "󰂯",
     "format-disabled": "󰂲",
+    "format-off": "󰂲",
     "format-connected": "󰂯",
     "tooltip-format": "Devices connected: {num_connections}",
     "on-click": "omarchy-launch-bluetooth",
@@ -129,7 +159,11 @@
     "scroll-step": 5,
     "format-muted": "",
     "format-icons": {
-      "default": ["", "", ""],
+      "default": [
+        "",
+        "",
+        ""
+      ],
     },
   },
   "group/tray-expander": {
@@ -138,7 +172,10 @@
       "transition-duration": 600,
       "children-class": "tray-group-item",
     },
-    "modules": ["custom/expand-icon", "tray"],
+    "modules": [
+      "custom/expand-icon",
+      "tray"
+    ],
   },
   "custom/expand-icon": {
     "format": "",
