--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,9 +1,12 @@
 # Options
+setw -g mode-keys vi
 set -sg terminal-overrides ",*:RGB"  # true color support
-set -g escape-time 0  # disable delays on escape sequences
 set -g mouse on
+set -g escape-time 0  # disable delays on escape sequences
 set -g renumber-windows on  # keep numbering sequential
 set -g repeat-time 1000  # increase "prefix-free" window
+set -g default-terminal "${TERM}"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # Options: start indexes from 1
 set -g base-index 1
@@ -12,8 +15,8 @@ set -g pane-base-index 1
 # Change prefix
 unbind C-b
 set -g prefix C-b
-
 bind C-b send-prefix
+
 # Theme: borders
 set -g pane-border-lines simple
 set -g pane-border-style fg=blue,bright
