--- a/dot_config/zed/private_settings.json
+++ b/dot_config/zed/private_settings.json
@@ -3,13 +3,14 @@
     "default_model": {
       "provider": "copilot_chat",
       "model": "gpt-4.1"
-    }
+    },
+    "default_width": 500
   },
-  "buffer_font_family": "CommitMono Nerd Font",
-  "buffer_font_features": {
-    "ss00": true
-  },
-  "buffer_font_size": 17,
+  "buffer_font_family": "BerkeleyMono Nerd Font",
+  // "buffer_font_features": {
+  //   "ss00": true
+  // },
+  "buffer_font_size": 18,
   "buffer_font_weight": 300,
   "cursor_blink": false,
   "features": {
@@ -21,11 +22,14 @@
   },
   "hide_mouse": "on_typing_and_movement",
   "icon_theme": "Catppuccin Mocha",
-  "outline_panel": {
-    "dock": "right"
-  },
-  "preview_tabs": {
-    "enabled": true
+  "outline_panel": { "dock": "right" },
+  "indent_guides": { "enabled": false },
+  "preview_tabs": { "enabled": true },
+  "use_system_prompts": false,
+  "tab_bar": {
+    "show_nav_history_buttons": false,
+    "show": true,
+    "show_tab_bar_buttons": false
   },
   "project_panel": {
     "dock": "right",
@@ -45,10 +49,11 @@
   },
   "theme": "Aether",
   "toolbar": {
-    "quick_actions": false
+    "quick_actions": false,
+    "breadcrumbs": true
   },
-  "ui_font_family": "CommitMono Nerd Font",
-  "ui_font_size": 17,
+  "ui_font_family": "BerkeleyMono Nerd Font",
+  "ui_font_size": 18,
   "ui_font_weight": 300,
   "vim_mode": true
 }
