--- a/dot_config/aerospace/aerospace.toml
+++ b/dot_config/aerospace/aerospace.toml
@@ -1,12 +1,18 @@
+automatically-unhide-macos-hidden-apps = false
+on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
+
 [gaps]
-  inner.horizontal = 16
-  inner.vertical =   16
-  outer.left =       16
-  outer.bottom =     16
-  outer.top =        16
-  outer.right =      16
+  inner.horizontal = 32
+  inner.vertical =   32
+  outer.left =       32
+  outer.bottom =     32
+  outer.top =        32
+  outer.right =      32
 
 [mode.main.binding]
+  cmd-h = []
+  cmd-alt-h = []
+
   alt-enter = 'exec-and-forget open -n -a "ghostty"'
   alt-b = 'exec-and-forget open -n -a "Brave Browser"'
   alt-a = 'exec-and-forget open -n -a "Brave Browser" --args --app="https://chat.openai.com"'
@@ -17,6 +23,7 @@
 
   alt-w = "close"
   alt-o = "fullscreen"
+  alt-f = ['layout floating tiling', 'mode main']
 
   alt-h = "focus left"
   alt-j = "focus down"
@@ -28,11 +35,6 @@
   alt-shift-k = "move up"
   alt-shift-l = "move right"
 
-  alt-equal = "resize width +50"
-  alt-minus = "resize width -50"
-  alt-shift-equal = "resize height +50"
-  alt-shift-minus = "resize height -50"
-
   alt-1 = "workspace 1"
   alt-2 = "workspace 2"
   alt-3 = "workspace 3"
@@ -41,13 +43,41 @@
   alt-6 = "workspace 6"
   alt-7 = "workspace 7"
   alt-8 = "workspace 8"
+  alt-9 = "workspace 9"
 
-  alt-shift-1 = "move-node-to-workspace 1"
-  alt-shift-2 = "move-node-to-workspace 2"
-  alt-shift-3 = "move-node-to-workspace 3"
-  alt-shift-4 = "move-node-to-workspace 4"
-  alt-shift-5 = "move-node-to-workspace 5"
-  alt-shift-6 = "move-node-to-workspace 6"
-  alt-shift-7 = "move-node-to-workspace 7"
-  alt-shift-8 = "move-node-to-workspace 8"
+  alt-shift-1 = ["move-node-to-workspace 1", "workspace 1"]
+  alt-shift-2 = ["move-node-to-workspace 2", "workspace 2"]
+  alt-shift-3 = ["move-node-to-workspace 3", "workspace 3"]
+  alt-shift-4 = ["move-node-to-workspace 4", "workspace 4"]
+  alt-shift-5 = ["move-node-to-workspace 5", "workspace 5"]
+  alt-shift-6 = ["move-node-to-workspace 6", "workspace 6"]
+  alt-shift-7 = ["move-node-to-workspace 7", "workspace 7"]
+  alt-shift-8 = ["move-node-to-workspace 8", "workspace 8"]
+  alt-shift-9 = ["move-node-to-workspace 9", "workspace 9"]
 
+  alt-r = 'mode resize'
+  alt-s = 'mode service'
+
+[mode.service.binding]
+  space  = ['reload-config', 'mode main']
+  r = ['flatten-workspace-tree', 'mode main'] # reset layout
+  f = ['layout floating tiling', 'mode main'] # Toggle between floating and tiling layout
+  backspace = ['close-all-windows-but-current', 'mode main']
+
+  # sticky is not yet supported https://github.com/nikitabobko/AeroSpace/issues/2
+  #s = ['layout sticky tiling', 'mode main']
+
+  h = ['join-with left', 'mode main']
+  j = ['join-with down', 'mode main']
+  k = ['join-with up', 'mode main']
+  l = ['join-with right', 'mode main']
+  enter = 'mode main'
+  esc = 'mode main'
+
+[mode.resize.binding]
+  h = 'resize width -50'
+  j = 'resize height +50'
+  k = 'resize height -50'
+  l = 'resize width +50'
+  enter = 'mode main'
+  esc = 'mode main'
