--- a/dot_config/aerospace/aerospace.toml
+++ b/dot_config/aerospace/aerospace.toml
@@ -10,16 +10,13 @@ on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
   outer.right =      32
 
 [mode.main.binding]
-  cmd-h = []
-  cmd-alt-h = []
-
   alt-enter = 'exec-and-forget open -n -a "ghostty"'
   alt-b = 'exec-and-forget open -n -a "Brave Browser"'
   alt-a = 'exec-and-forget open -n -a "Brave Browser" --args --app="https://chat.openai.com"'
   alt-y = 'exec-and-forget open -n -a "Brave Browser" --args --app="https://youtube.com"'
   alt-m = 'exec-and-forget open -n -a "Brave Browser" --args --app="https://music.youtube.com"'
   alt-shift-m = 'exec-and-forget open -n -a "Brave Browser" --args --app="https://monkeytype.com"'
-  alt-shift-w = 'exec-and-forget open -n -a "Brave Browser" --args --app="https://whatsapp.web.com"'
+  alt-shift-w = 'exec-and-forget open -n -a "Brave Browser" --args --app="https://web.whatsapp.com"'
 
   alt-w = "close"
   alt-o = "fullscreen"
